--- a/architecture/index.html
+++ b/architecture/index.html
@@ -21,8 +21,7 @@
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
   <meta property="og:url" content="https://vickywang.me/architecture">
   <meta property="og:site_name" content="Vicky's Website">
-  <meta property="og:image"
-    content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
+  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -30,8 +29,7 @@
   <meta property="twitter:title" content="Architectural Portfolio - Vicky Wang">
   <meta property="twitter:description"
     content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-  <meta property="twitter:image"
-    content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
+  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
   <!-- favicon -->
 
@@ -131,37 +129,40 @@
   <!--intro-->
   <div class="wrapper">
     <div class="element">
-      <div class="intro">
-        <div class="t-hello">hi there! </div>
-      </div>
-      <div class="row">
-        <div class="widthMax">
-          <strong>
-            <div class="intro" data-aos="fade-up">
-              <h1> Architecture &nbsp;</h1>
-              <span class="divider1"></span>
-              <h1> Academic projects </h1>
-            </div>
-          </strong>
+
+      <div class="marginResponsiveGrid">
+        <div class="intro">
+          <div class="t-hello">hi there! </div>
         </div>
-
-        <div class="paddingleft">
-          <div class="widthFitContent">
-            <div class="dropdownSM">
-              <img title="Share" class="iconM hoverGrey100 paddingMax borderRadiusMax dropbtn" src="../icon/share.svg"
-                alt="Share">
-              <div class="dropdownSM-content">
-                <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me/architecture"
-                  target="_blank">Share on LinkedIn</a>
-
-                <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me/blog&media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&description=Architectural%20Portfolio%20-%20Vicky%20Wang"
-                  target="_blank">
-                  Share on Pinterest
-                </a>
-
+        <div class="row">
+          <div class="widthMax">
+            <strong>
+              <div class="intro" data-aos="fade-up">
+                <h1> Architecture &nbsp;</h1>
+                <span class="divider1"></span>
+                <h1> Academic projects </h1>
               </div>
-            </div>
+            </strong>
+          </div>
 
+          <div class="paddingleft">
+            <div class="widthFitContent">
+              <div class="dropdownSM">
+                <img title="Share" class="iconS hoverGrey100 paddingM borderRadiusMax dropbtn" src="../icon/share.svg"
+                  alt="Share">
+                <div class="dropdownSM-content">
+                  <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me/architecture"
+                    target="_blank">Share on LinkedIn</a>
+
+                  <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me/blog&media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&description=Architectural%20Portfolio%20-%20Vicky%20Wang"
+                    target="_blank">
+                    Share on Pinterest
+                  </a>
+
+                </div>
+              </div>
+
+            </div>
           </div>
         </div>
       </div>
