--- a/design_system/index.html
+++ b/design_system/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head> 
+<head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -1879,15 +1879,18 @@
             </div>
           </div>
           <div class="blankHXS"></div>
-          <div class="rowToColumn">
-            <div class="widthMax">
-              <div class="Demo ">
-                <div class="elementInnerDemo max-width"></div>
+          <div class="marginResponsiveGrid">
+
+            <div class="rowToColumn">
+              <div class="widthMax">
+                <div class="Demo ">
+                  <div class="elementInnerDemo max-width"></div>
+                </div>
               </div>
-            </div>
-            <div class="paddingleft">
-              <div class="Demo widthFitContent">
-                <div class="elementInnerDemo fix-width"></div>
+              <div class="paddingleft">
+                <div class="Demo widthFitContent">
+                  <div class="elementInnerDemo fix-width"></div>
+                </div>
               </div>
             </div>
           </div>
@@ -4023,8 +4026,8 @@
               <h2 class="element">Slideshow Title</h2>
             </div>
           </div>
-          <div class="wrapper TBcarousel Grid--center Grid Grid--full marginResponsiveGrid u-textCenter" aria-label="TBcarousel" Tabindex="0"
-            id="TBcarousel1">
+          <div class="wrapper TBcarousel Grid--center Grid Grid--full marginResponsiveGrid u-textCenter"
+            aria-label="TBcarousel" Tabindex="0" id="TBcarousel1">
             <div class="TBslides">
               <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
                 <img src="./Placeholder.svg" alt="">
@@ -4117,8 +4120,8 @@
               <h2 class="element">Slideshow Title</h2>
             </div>
           </div>
-          <div class="wrapper TBcarousel Grid--center Grid Grid--full marginResponsiveGrid u-textCenter" aria-label="TBcarousel" Tabindex="0"
-            id="TBcarousel2">
+          <div class="wrapper TBcarousel Grid--center Grid Grid--full marginResponsiveGrid u-textCenter"
+            aria-label="TBcarousel" Tabindex="0" id="TBcarousel2">
             <div class="TBslides">
               <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
                 <img src="./PlaceholderDark.svg" alt="">
