--- a/index.html
+++ b/index.html
@@ -136,113 +136,120 @@
     <!--intro-->
     <div class="wrapper">
       <div class="element">
+        <div class="marginResponsiveGrid">
 
-        <p class="t-hello">hello, I'm Vicky. </p>
-        <div class="row">
-          <div class="widthMax">
-            <strong>
-              <div class="intro" data-aos="fade-up">
-                <h1> UX designer &nbsp;</h1>
-                <span class="divider1"></span>
-                <h1> Product designer </h1>
-              </div>
-            </strong>
-          </div>
+          <p class="t-hello">hello, I'm Vicky. </p>
 
-          <div class="paddingleft">
-            <div class="widthFitContent">
-              <div class="dropdownSM">
-                <img title="Share" class="iconM hoverGrey100 paddingMax borderRadiusMax dropbtn" src="./icon/share.svg"
-                  alt="Share">
-                <div class="dropdownSM-content">
-                  <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me"
-                    target="_blank">Share on LinkedIn</a>
-                    <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me&media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&description=Skilled%20UX%20Designer%20for%20B2B%20Solutions%20%26%20Consumer%20Apps%20-%20Vicky%20Wang"
-                    target="_blank">Share on Pinterest</a>
+          <div class="row">
+            <div class="widthMax">
+              <strong>
+                <div class="intro" data-aos="fade-up">
+                  <h1> UX designer &nbsp;</h1>
+                  <span class="divider1"></span>
+                  <h1> Product designer </h1>
                 </div>
-              </div>
+              </strong>
+            </div>
 
+
+            <div class="paddingleft">
+              <div class="widthFitContent">
+                <div class="dropdownSM">
+
+                  <img title="Share" class="iconS hoverGrey100 paddingM borderRadiusMax dropbtn" src="./icon/share.svg"
+                    alt="Share">
+                  <div class="dropdownSM-content">
+                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me"
+                      target="_blank">Share on LinkedIn</a>
+                    <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me&media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&description=Skilled%20UX%20Designer%20for%20B2B%20Solutions%20%26%20Consumer%20Apps%20-%20Vicky%20Wang"
+                      target="_blank">Share on Pinterest</a>
+                  </div>
+                </div>
+
+              </div>
             </div>
           </div>
         </div>
-
         <div class="Grid Grid--full marginResponsiveGrid">
           <div class="Grid-cell">
             <h3>I work with a small team based in San Francisco to design business and consumer-facing websites. My
               strength lies in understanding complex problems and requirements and transforming them into simple and
               effective solutions. </h3>
           </div>
-
-        </div>
-        <div class="Grid Grid--gutters Grid--cols-8 u-textCenter Grid--center">
-
-
-          <div class="Grid-cell">
-            <div class="ClipboardBoxIconOnly">
-              <button class="ClipboardIconOnly">
-                <img title="Copy Email to Clipboard" class="iconM hoverGrey100 paddingMax borderRadiusMax"
-                  src="./icon/mail.svg" alt="LinkedIn">
-                <p class="clickIconCopy">vickyw.design@gmail.com</p>
-              </button>
-            </div>
-
-          </div>
-          <div class="Grid-cell">
-            <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank" title="LinkedIn">
-              <img class="iconM hoverGrey100 paddingMax borderRadiusMax" src="./icon/in.svg" alt="LinkedIn">
-            </a>
-          </div>
-
-          <div class="Grid-cell">
-            <a href="https://github.com/vicky-wyq" target="_blank" title="GitHub">
-              <img class="iconM hoverGrey100 paddingMax borderRadiusMax" src="./icon/git.svg" alt="GitHub">
-            </a>
-          </div>
-          <div class="Grid-cell">
-            <a href="https://codepen.io/vicky-wyq" target="_blank" title="CodePen">
-              <img class="iconM hoverGrey100 paddingMax borderRadiusMax" src="./icon/Codepen.svg" alt="CodePen">
-            </a>
-          </div>
-
-          <div class="Grid-cell">
-            <a href="https://www.instagram.com/vw_yiqi/" target="_blank" title="Instagram">
-              <img class="iconM hoverGrey100 paddingMax borderRadiusMax" src="./icon/ins.svg" alt="Instagram">
-            </a>
-          </div>
-
-
-
-
-
-          <div class="Grid-cell">
-          </div>
-          <div class="Grid-cell">
-          </div>
-          <div class="Grid-cell">
-          </div>
-          <div class="Grid-cell">
-          </div>
-          <div class="Grid-cell">
-          </div>
-          <div class="Grid-cell">
-          </div>
-          <div class="Grid-cell">
-          </div>
-
-
-
-
-        </div>
-
-
-        <div class="Grid Grid--gutters Grid--cols-3">
-          <a href="/resume.pdf" target="_blank"> <button class="buttonLanding arrButtonResume">Resume
-              &nbsp;
-            </button></a>
-          <a href="/about"> <button class="buttonLanding arrButton">About me &nbsp;
-            </button></a>
         </div>
       </div>
+
+
+      <div class="Grid Grid--gutters Grid--cols-8 u-textCenter Grid--center">
+
+
+        <div class="Grid-cell">
+          <div class="ClipboardBoxIconOnly">
+            <button class="ClipboardIconOnly">
+              <img title="Copy Email to Clipboard" class="iconM hoverGrey100 paddingMax borderRadiusMax"
+                src="./icon/mail.svg" alt="LinkedIn">
+              <p class="clickIconCopy">vickyw.design@gmail.com</p>
+            </button>
+          </div>
+
+        </div>
+        <div class="Grid-cell">
+          <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank" title="LinkedIn">
+            <img class="iconM hoverGrey100 paddingMax borderRadiusMax" src="./icon/in.svg" alt="LinkedIn">
+          </a>
+        </div>
+
+        <div class="Grid-cell">
+          <a href="https://github.com/vicky-wyq" target="_blank" title="GitHub">
+            <img class="iconM hoverGrey100 paddingMax borderRadiusMax" src="./icon/git.svg" alt="GitHub">
+          </a>
+        </div>
+        <div class="Grid-cell">
+          <a href="https://codepen.io/vicky-wyq" target="_blank" title="CodePen">
+            <img class="iconM hoverGrey100 paddingMax borderRadiusMax" src="./icon/Codepen.svg" alt="CodePen">
+          </a>
+        </div>
+
+        <div class="Grid-cell">
+          <a href="https://www.instagram.com/vw_yiqi/" target="_blank" title="Instagram">
+            <img class="iconM hoverGrey100 paddingMax borderRadiusMax" src="./icon/ins.svg" alt="Instagram">
+          </a>
+        </div>
+
+
+
+
+
+        <div class="Grid-cell">
+        </div>
+        <div class="Grid-cell">
+        </div>
+        <div class="Grid-cell">
+        </div>
+        <div class="Grid-cell">
+        </div>
+        <div class="Grid-cell">
+        </div>
+        <div class="Grid-cell">
+        </div>
+        <div class="Grid-cell">
+        </div>
+
+
+
+
+      </div>
+
+
+      <div class="Grid Grid--gutters Grid--cols-3">
+        <a href="/resume.pdf" target="_blank"> <button class="buttonLanding arrButtonResume">Resume
+            &nbsp;
+          </button></a>
+        <a href="/about"> <button class="buttonLanding arrButton">About me &nbsp;
+          </button></a>
+      </div>
+
+    </div>
     </div>
     <!--intro-->
 
@@ -476,7 +483,7 @@
     <div class="blankHM"></div>
 
     <!-- message -->
-    <div class="blankHM"></div>
+    <div class="blankHL"></div>
     <div class="Grid Grid--full marginResponsiveGrid u-textCenter">
       <div class="Grid-cell">
         <div data-aos="fade-up">
