--- a/photography/index.html
+++ b/photography/index.html
@@ -134,36 +134,39 @@
   <!--intro-->
   <div class="wrapper">
     <div class="element">
-      <div class="intro">
-        <div class="t-hello">hi there! </div>
-      </div>
+      <div class="marginResponsiveGrid">
 
-      <div class="row">
-        <div class="widthMax">
-          <strong>
-            <div class="intro" data-aos="fade-up">
-              <h1> Photographs &nbsp;</h1>
-              <span class="divider1"></span>
-              <h1> Nature &#38; wildlife </h1>
-            </div>
-          </strong>
+        <div class="intro">
+          <div class="t-hello">hi there! </div>
         </div>
-        <div class="paddingleft">
-          <div class="widthFitContent">
-            <div class="dropdownSM">
-              <img title="Share" class="iconM hoverGrey100 paddingMax borderRadiusMax dropbtn" src="../icon/share.svg"
-                alt="Share">
-              <div class="dropdownSM-content">
-                <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me/photography"
-                  target="_blank">Share on LinkedIn</a>
 
-                <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me/blog&media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&description=Photographic%20Artistry%20by%20Vicky%20Wang"
-                  target="_blank">
-                  Share on Pinterest
-                </a>
+        <div class="row">
+          <div class="widthMax">
+            <strong>
+              <div class="intro" data-aos="fade-up">
+                <h1> Photographs &nbsp;</h1>
+                <span class="divider1"></span>
+                <h1> Nature &#38; wildlife </h1>
               </div>
-            </div>
+            </strong>
+          </div>
+          <div class="paddingleft">
+            <div class="widthFitContent">
+              <div class="dropdownSM">
+                <img title="Share" class="iconS hoverGrey100 paddingM borderRadiusMax dropbtn" src="../icon/share.svg"
+                  alt="Share">
+                <div class="dropdownSM-content">
+                  <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me/photography"
+                    target="_blank">Share on LinkedIn</a>
 
+                  <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me/blog&media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&description=Photographic%20Artistry%20by%20Vicky%20Wang"
+                    target="_blank">
+                    Share on Pinterest
+                  </a>
+                </div>
+              </div>
+
+            </div>
           </div>
         </div>
       </div>
@@ -241,15 +244,12 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="ShadowBox">
-                  <img src="default_Squirrel_Stand.jpg" 
-                       srcset="small_Squirrel_Stand.jpg 500w, 
+                  <img src="default_Squirrel_Stand.jpg" srcset="small_Squirrel_Stand.jpg 500w, 
                                medium_Squirrel_Stand.jpg 1000w, 
-                               large_Squirrel_Stand.jpg 1500w" 
-                       sizes="(max-width: 480px) 400px, 
+                               large_Squirrel_Stand.jpg 1500w" sizes="(max-width: 480px) 400px, 
                               (max-width: 768px) 700px, 
                               (max-width: 1024px) 1000px, 
-                              1500px" 
-                       alt="Squirrel Eat Nuts">
+                              1500px" alt="Squirrel Eat Nuts">
                   <div class="elementInner">
                     <h5>Wildlife</h5>
                     <h3><strong>Grove Rocky View, Monterey, CA</strong> </h3>
@@ -269,15 +269,12 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="ShadowBox">
-                  <img src="default_Squirrel_Eat.jpg" 
-                       srcset="small_Squirrel_Eat.jpg 500w, 
+                  <img src="default_Squirrel_Eat.jpg" srcset="small_Squirrel_Eat.jpg 500w, 
                                medium_Squirrel_Eat.jpg 1000w, 
-                               large_Squirrel_Eat.jpg 1500w" 
-                       sizes="(max-width: 480px) 400px, 
+                               large_Squirrel_Eat.jpg 1500w" sizes="(max-width: 480px) 400px, 
                               (max-width: 768px) 700px, 
                               (max-width: 1024px) 1000px, 
-                              1500px" 
-                       alt="Squirrel Eat Nuts">
+                              1500px" alt="Squirrel Eat Nuts">
 
                   <div class="elementInner">
                     <h5>Wildlife</h5>
