--- a/seer/index.html
+++ b/seer/index.html
@@ -1768,7 +1768,7 @@
   <button id="myBtn" title="Back to top">
     <div id="dad">
       <div id="bro">
-        <img id="bottom-arrow" class="" src="../../icon/arrow-top.svg" alt="back to top">
+        <img id="bottom-arrow" class="" src="../icon/arrow-top.svg" alt="back to top">
       </div>
       <div id="sis">
         <h4>TOP</h4>
