--- a/about/index.html
+++ b/about/index.html
@@ -123,64 +123,65 @@
   <!--intro-->
   <div class="wrapper">
     <div class="element">
-
-      <div class="intro">
-        <div class="t-hello">hi there! </div>
-      </div>
-
-      <div class="row">
-        <div class="widthMax">
-          <strong>
-            <div class="intro" data-aos="fade-up">
-              <h1> Product &nbsp;</h1>
-              <span class="divider1"></span>
-              <h1> Design &nbsp;</h1>
-              <span class="divider1"></span>
-              <h1> Architecture </h1>
-              <span class="divider1"></span>
-              <h1> Art </h1>
-            </div>
-          </strong>
+      <div class="marginResponsiveGrid">
+        <div class="intro">
+          <div class="t-hello">hi there! </div>
         </div>
-        <div class="paddingleft">
-          <div class="widthFitContent">
-            <div class="dropdownSM">
-              <img title="Share" class="iconM hoverGrey100 paddingMax borderRadiusMax dropbtn" src="../icon/share.svg"
-                alt="Share">
-              <div class="dropdownSM-content">
-                <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me/about"
-                  target="_blank">Share on LinkedIn</a>
 
-                <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me/blog&media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&description=Professional%20Background%20and%20Interests%20-%20Vicky%20Wang"
-                  target="_blank">
-                  Share on Pinterest
-                </a>
-
+        <div class="row">
+          <div class="widthMax">
+            <strong>
+              <div class="intro" data-aos="fade-up">
+                <h1> Product &nbsp;</h1>
+                <span class="divider1"></span>
+                <h1> Design &nbsp;</h1>
+                <span class="divider1"></span>
+                <h1> Architecture </h1>
+                <span class="divider1"></span>
+                <h1> Art </h1>
               </div>
+            </strong>
+          </div>
+          <div class="paddingleft">
+            <div class="widthFitContent">
+              <div class="dropdownSM">
+                <img title="Share" class="iconS hoverGrey100 paddingM borderRadiusMax dropbtn" src="../icon/share.svg"
+                  alt="Share">
+                <div class="dropdownSM-content">
+                  <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me/about"
+                    target="_blank">Share on LinkedIn</a>
+
+                  <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me/blog&media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&description=Professional%20Background%20and%20Interests%20-%20Vicky%20Wang"
+                    target="_blank">
+                    Share on Pinterest
+                  </a>
+
+                </div>
+              </div>
+
             </div>
-
           </div>
         </div>
-      </div>
-      <div class="rowToColumn centerVH">
-        <div class="widthMax">
-          <div class="Grid-cell">
+        <div class="rowToColumn centerVH">
+          <div class="widthMax">
+            <div class="Grid-cell">
 
-            <h3>As a UX designer, I possess a diverse range of skills and have gained experience in startup
-              environments. I am fully involved in every aspect of the design process and continuously aim to create
-              seamless user experiences that align with business objectives. My approach emphasizes simplicity, using
-              the fewest design elements necessary to address core issues effectively.</h3>
-            <h3>My fascination with craftsmanship extends beyond just UX. It is evident both in the art of crafting
-              user-centric interfaces and in appreciating the finer details of everyday life.
-            </h3>
-            <h3>I take pleasure in immersing myself in new technologies. Doing so not only fosters smoother
-              collaboration with developers but also deepens my understanding of design, ultimately driving
-              productivity.</h3>
+              <h3>As a UX designer, I possess a diverse range of skills and have gained experience in startup
+                environments. I am fully involved in every aspect of the design process and continuously aim to create
+                seamless user experiences that align with business objectives. My approach emphasizes simplicity, using
+                the fewest design elements necessary to address core issues effectively.</h3>
+              <h3>My fascination with craftsmanship extends beyond just UX. It is evident both in the art of crafting
+                user-centric interfaces and in appreciating the finer details of everyday life.
+              </h3>
+              <h3>I take pleasure in immersing myself in new technologies. Doing so not only fosters smoother
+                collaboration with developers but also deepens my understanding of design, ultimately driving
+                productivity.</h3>
+            </div>
           </div>
-        </div>
-        <div class="paddingleft">
-          <div class="widthFitContent">
-            <img class="widthS" src="./me.jpg" alt="icon arrow">
+          <div class="paddingleft">
+            <div class="widthFitContent">
+              <img class="widthS" src="./me.jpg" alt="icon arrow">
+            </div>
           </div>
         </div>
       </div>
