--- a/appointa/index.html
+++ b/appointa/index.html
@@ -2239,7 +2239,7 @@
   <button id="myBtn" title="Back to top">
     <div id="dad">
       <div id="bro">
-        <img id="bottom-arrow" src="../../icon/arrow-top.svg" alt="back to top">
+        <img id="bottom-arrow" src="../icon/arrow-top.svg" alt="back to top">
       </div>
       <div id="sis">
         <h4>TOP</h4>
